[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["omerkobi <omerkobi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
