[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["omerkobi <omerkobi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
graphviz = "^0.20.3"
llvmlite = "^0.43.0"
numba = "^0.60.0"
shap = "^0.46.0"
requests = "^2.32.3"
ipython = "^8.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
